# alocador-turmasCSP

./: .gitignore  LICENSE  README.md
haskell/: haskell.cabal
haskell/.github/: copilot-instructions.md
haskell/.stack-work/: stack.sqlite3
haskell/.stack-work/ghci/7bb90bad/: cabal_macros.h
haskell/.stack-work/ghci/ca4b4198/: cabal_macros.h
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell/src/: Alocador.hi  Alocador.hs  Main.hi  Main.hs  Schedule.hs  Tipos.hi  Tipos.hs
haskell/src/Repository/: AlocateRepository.hs  ClassRepository.hs  ClassroomRepository.hs  TestRepo.hs  UserRepository.hs
haskell/src/Utils/: Alocate.hs  Error.hs  Resources.hs  Table.hs
haskell/src/View/: AdminView.hs  ClassView.hs  ClassroomView.hs  ProfessorView.hs  Register.hs  RegisterView.hs  UI.hs
haskell/src/data/: allocate.txt  class.txt  classroom.txt  user.txt
haskell/src/haskell/: haskell.cabal
haskell/src/repository/: ClassRepository.hs  ClassroomRepository.hs  UserRepository.hs
haskell/src/utils/: AddResources.hs  Alocate.hs  IoUtils.hs  Resources.hs  Schedule.hs
haskell/src/view/: ClassView.hs  ProfessorView.hs  register.hs
prolog/src/: alocador.pl  dados.pl  main.pl  save.pl  schedule.pl  validacao.pl
prolog/src/interfaces/: UI.pl  adminInterface.pl  profInterface.pl  userInterface.pl
prolog/src/repository/: classes.pl  save.pl  userRepository.pl  utils-classroom.pl  utils.pl  utilsClass.pl
prolog/src/rules/: alocacoes.pl  classes.pl  classrooms.pl  horarios_ocupados_sala.pl  horarios_salas.pl  horarios_turmas.pl  users.pl
