cabal-version:       2.2

name:                haskell
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Repository.ClassRepository
                       Repository.UserRepository
                       Repository.ClassroomRepository
                       View.AdminView
                       View.ClassroomView
                       View.ClassView
                       View.RegisterView
                       View.ProfessorView
                       View.UI
                       Utils.Alocate 
                       Utils.AddResources
                       Tipos
                       Utils.Schedule
                       
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split,
                       containers <= 0.7,
                       mtl,
                       text,
                       ansi-terminal
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
